--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/Kadynm49/lv-stock-monitor.git"
   },
   "keywords": [],
-  "author": "Kadyn Marshall",
+  "author": "Kadyn Zachary James Marshall",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Kadynm49/lv-stock-monitor/issues"
